--- a/app/src/main/res/layout/custom_next_meeting_dialog.xml
+++ b/app/src/main/res/layout/custom_next_meeting_dialog.xml
@@ -66,20 +66,20 @@
                 android:id="@+id/edt_next_meeting_dialog"
                 android:layout_width="0dp"
                 android:layout_height="wrap_content"
-                android:drawableRight="@drawable/cal"
                 android:layout_marginTop="@dimen/layout_margin"
                 android:layout_weight="1"
                 android:background="@drawable/edit_background"
+                android:clickable="false"
                 android:drawablePadding="@dimen/view_padding"
+                android:drawableRight="@drawable/cal"
+                android:focusable="false"
+                android:inputType="none"
                 android:maxLength="50"
                 android:padding="@dimen/view_padding"
                 android:singleLine="true"
-                android:focusable="false"
-                android:clickable="false"
-                android:windowSoftInputMode="stateHidden"
-                android:inputType="none"
+                android:textColor="@android:color/black"
                 android:textIsSelectable="true"
-                android:textColor="@android:color/black" />
+                android:windowSoftInputMode="stateHidden" />
         </LinearLayout>
 
         <LinearLayout
@@ -107,9 +107,9 @@
                 android:layout_weight="1"
                 android:background="@drawable/edit_background"
                 android:drawablePadding="@dimen/view_padding"
-                android:inputType="text"
-                android:focusableInTouchMode="false"
                 android:focusable="false"
+                android:focusableInTouchMode="false"
+                android:inputType="text"
                 android:maxLength="50"
                 android:padding="@dimen/view_padding"
                 android:singleLine="true"
@@ -136,13 +136,13 @@
                 android:id="@+id/btn1_submitv"
                 android:layout_width="wrap_content"
                 android:layout_height="match_parent"
-                android:layout_marginTop="10dp"
-                android:background="@color/colorRed"
-                android:layout_toLeftOf="@+id/btn1_close"
-                android:paddingLeft="15dp"
-                android:gravity="center"
-                android:paddingRight="15dp"
                 android:layout_marginRight="20dp"
+                android:layout_marginTop="10dp"
+                android:layout_toLeftOf="@+id/btn1_close"
+                android:background="@color/colorRed"
+                android:gravity="center"
+                android:paddingLeft="15dp"
+                android:paddingRight="15dp"
                 android:text="@string/submit"
                 android:textColor="@android:color/white" />
 
@@ -153,8 +153,8 @@
                 android:layout_alignParentRight="true"
                 android:layout_marginTop="10dp"
                 android:background="@color/colorRed"
-                android:paddingLeft="15dp"
                 android:gravity="center"
+                android:paddingLeft="15dp"
                 android:paddingRight="15dp"
                 android:text="@string/closebtn"
                 android:textColor="@android:color/white" />
