--- a/app/src/main/res/layout/activity_change_password.xml
+++ b/app/src/main/res/layout/activity_change_password.xml
@@ -2,8 +2,7 @@
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:orientation="vertical"
-    >
+    android:orientation="vertical">
 
     <include
         android:id="@+id/layout_header"
@@ -12,14 +11,14 @@
         android:layout_height="wrap_content">
 
     </include>
+
     <RelativeLayout
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:layout_marginTop="10dp"
+        android:layout_below="@+id/linear_header"
         android:layout_marginBottom="5dp"
         android:layout_marginRight="10dp"
-        android:layout_below="@+id/linear_header"
-        >
+        android:layout_marginTop="10dp">
 
         <TextView
             android:id="@+id/welcome"
@@ -33,10 +32,11 @@
             android:id="@+id/admin"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:layout_marginLeft="3dp"
             android:layout_alignParentRight="true"
+            android:layout_marginLeft="3dp"
             android:textColor="@color/colorRed" />
     </RelativeLayout>
+
     <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
@@ -66,6 +66,7 @@
             android:singleLine="true"
             android:textColor="@android:color/black" />
     </LinearLayout>
+
     <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
@@ -95,6 +96,7 @@
             android:singleLine="true"
             android:textColor="@android:color/black" />
     </LinearLayout>
+
     <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
@@ -124,18 +126,17 @@
             android:singleLine="true"
             android:textColor="@android:color/black" />
     </LinearLayout>
+
     <Button
         android:layout_width="180dp"
         android:layout_height="wrap_content"
         android:layout_centerHorizontal="true"
         android:layout_centerVertical="true"
-        android:text="@string/change_pass"
         android:layout_gravity="center"
         android:layout_marginTop="15dp"
-        android:textColor="@android:color/white"
         android:background="@drawable/corner"
-        />
-
+        android:text="@string/change_pass"
+        android:textColor="@android:color/white" />
 
 
 </LinearLayout>
