--- a/app/src/main/res/layout/alert_dialog_listview_search.xml
+++ b/app/src/main/res/layout/alert_dialog_listview_search.xml
@@ -31,19 +31,18 @@
             android:layout_centerVertical="true"
             android:gravity="center"
             android:text="Not found!"
-            android:textAppearance="?android:attr/textAppearanceLarge"
-            />
+            android:textAppearance="?android:attr/textAppearanceLarge" />
 
         <ListView
             android:id="@+id/alertSearchListView"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
+            android:layout_alignParentBottom="true"
+            android:layout_alignParentLeft="true"
+            android:layout_alignParentStart="true"
             android:cacheColorHint="@null"
             android:fadeScrollbars="true"
             android:fastScrollEnabled="true"
-            android:textFilterEnabled="true"
-            android:layout_alignParentBottom="true"
-            android:layout_alignParentLeft="true"
-            android:layout_alignParentStart="true" />
+            android:textFilterEnabled="true" />
     </RelativeLayout>
 </LinearLayout>
