--- a/app/src/main/res/layout/dashboard_row_item.xml
+++ b/app/src/main/res/layout/dashboard_row_item.xml
@@ -1,8 +1,7 @@
 <?xml version="1.0" encoding="utf-8"?>
 <TableRow xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
-    android:layout_height="@dimen/size_80"
-    >
+    android:layout_height="@dimen/size_80">
 
 
     <TextView
@@ -43,8 +42,6 @@
         android:textAppearance="?android:attr/textAppearanceSmall"
         android:textColor="@android:color/black"
         android:textStyle="bold" />
-
-
 
 
     <TextView
