--- a/app/src/main/res/layout/layout_status_reports.xml
+++ b/app/src/main/res/layout/layout_status_reports.xml
@@ -339,22 +339,23 @@
                         android:drawablePadding="@dimen/view_padding" />
                 </LinearLayout>
             </LinearLayout>
-                <LinearLayout
-                    android:layout_width="match_parent"
-                    android:layout_height="wrap_content"
-                    android:gravity="center"
-                    android:orientation="vertical">
 
-                    <Button
-                        android:id="@+id/btn_search"
-                        android:layout_width="wrap_content"
-                        android:layout_height="wrap_content"
-                        android:layout_margin="@dimen/size_10"
-                        android:background="@color/colorRed"
-                        android:text="@string/searchBtn"
-                        android:visibility="gone"
-                        android:textColor="@color/colorWhite" />
-                </LinearLayout>
+            <LinearLayout
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:gravity="center"
+                android:orientation="vertical">
+
+                <Button
+                    android:id="@+id/btn_search"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:layout_margin="@dimen/size_10"
+                    android:background="@color/colorRed"
+                    android:text="@string/searchBtn"
+                    android:textColor="@color/colorWhite"
+                    android:visibility="gone" />
+            </LinearLayout>
 
 
             <LinearLayout
