--- a/app/src/main/res/layout/message_item_list_notify.xml
+++ b/app/src/main/res/layout/message_item_list_notify.xml
@@ -2,57 +2,56 @@
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:orientation="vertical"
-    android:background="@color/gray" >
+    android:background="@color/gray"
+    android:orientation="vertical">
 
-   
 
     <TableLayout
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-       android:layout_margin="2dp"
-        >
+        android:layout_margin="2dp">
 
         <TableRow
             android:id="@+id/tableRow1"
             android:layout_width="match_parent"
-            android:layout_height="wrap_content" 
+            android:layout_height="wrap_content"
             android:weightSum="100">
 
             <TextView
                 android:id="@+id/message"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:layout_weight="100"
                 android:layout_marginTop="8dp"
+                android:layout_weight="100"
+                android:gravity="top"
+                android:maxLines="50"
+                android:singleLine="false"
                 android:text="message"
                 android:textColor="@color/coloryellow"
                 android:textSize="15sp"
-                android:maxLines="50"
-                 android:gravity="top"
-                 android:singleLine="false"
                 android:textStyle="italic" />
         </TableRow>
-</TableLayout>
-        <TableLayout
+    </TableLayout>
+
+    <TableLayout
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-   
+
         >
-        
+
         <TableRow
             android:id="@+id/tableRow2"
             android:layout_width="match_parent"
-            android:layout_height="wrap_content" 
+            android:layout_height="wrap_content"
             android:layout_marginTop="10dp"
-           
+
             >
 
             <TextView
                 android:id="@+id/btnReceiver"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-               android:layout_weight="1"
+                android:layout_weight="1"
                 android:gravity="left"
                 android:text="Receiver"
                 android:textColor="@color/coloryellow" />
@@ -61,9 +60,9 @@
                 android:id="@+id/date"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-               	android:gravity="center"
-                android:text="date"
                 android:layout_weight="1"
+                android:gravity="center"
+                android:text="date"
                 android:textColor="@color/coloryellow" />
         </TableRow>
     </TableLayout>
