--- a/app/src/main/res/layout/screen_gridcell.xml
+++ b/app/src/main/res/layout/screen_gridcell.xml
@@ -3,7 +3,7 @@
     android:layout_width="wrap_content"
     android:layout_height="wrap_content"
     android:background="@drawable/calendar_button_selector"
-    android:orientation="vertical" >
+    android:orientation="vertical">
 
     <Button
         android:id="@+id/calendar_day_gridcell"
@@ -12,15 +12,13 @@
         android:layout_gravity="center"
         android:background="@drawable/calendar_button_selector"
         android:textAppearance="?android:attr/textAppearanceMedium"
-        android:textColor="#FFFFFF" >
-    </Button>
+        android:textColor="#FFFFFF"></Button>
 
     <TextView
         android:id="@+id/num_events_per_day"
         style="@style/calendar_event_style"
         android:layout_width="10dip"
         android:layout_height="10dip"
-        android:layout_gravity="right" >
-    </TextView>
+        android:layout_gravity="right"></TextView>
 
 </RelativeLayout>
