--- a/app/src/main/res/layout/login_acitivity.xml
+++ b/app/src/main/res/layout/login_acitivity.xml
@@ -117,7 +117,7 @@
             android:textColor="#ffffff"
             android:textSize="@dimen/size_28" />
 
-        <TextView
+       <!-- <TextView
             android:id="@+id/forget_password"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
@@ -127,7 +127,7 @@
             android:text="@string/forgetPassword"
             android:textAppearance="?android:attr/textAppearanceLarge"
             android:textColor="@color/colorBlue"
-            android:textSize="18sp" />
+            android:textSize="18sp" />-->
 
         <TextView
             android:id="@+id/forgot_pass_message"
